<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
    <name>ryml</name>
    <version>0.0.0</version>
    <description>Rapid YAML - a library to parse and emit YAML, and do it fast.</description>
    <maintainer email="dev@jpmag.me">Joao Paulo Magalhaes</maintainer>
    <license>MIT</license>

    <author email="dev@jpmag.me">Joao Paulo Magalhaes</author>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
